# cpp-principles-and-patterns

./: .clangd  CMakeLists.txt  GlossaryOfTerms.md  README.md  compile_flags.txt
src/: CMakeLists.txt
src/CRTP/: CMakeLists.txt
src/CRTP/After/: DenseVector.h  DenseVectorTest.cpp  DynamicVector.h  StaticVector.h
src/CRTP/Before/: DenseVectorTest.cpp  DynamicVector.h  StaticVector.h
src/Command/: CMakeLists.txt
src/Command/Basic/: Add.h  Calculator.h  CalculatorCommand.h  CalculatorTest.cpp  Subtract.h
src/Command/Value/: Add.h  Calculator.h  CalculatorTest.cpp  Subtract.h
src/Decorator/: CMakeLists.txt
src/Decorator/Template/: ConferenceTicket.h  DecoratorTest.cpp  Money.h  PricedItems.h
src/Decorator/TypeErasure/: DecoratorTest.cpp  Item.h  PricedItems.h
src/ExternalPolymorphism/: CMakeLists.txt  Circle.h  ExtPolyShapeTest.cpp  Shape.h  SpecificDrawStrategy.h  Square.h
src/FreeFunction/: CMakeLists.txt  Range.h  RangeTest.cpp
src/HowToTestPrivateMethod/: CMakeLists.txt  Widget_Before.h
src/HowToTestPrivateMethod/After/: Widget.h  WidgetTest.cpp
src/HowToTestPrivateMethod/Before/: WidgetTest.cpp
src/Observer/: CMakeLists.txt
src/Observer/Value/: Observer.h  Person.cpp  Person.h  PersonObserver.h  PersonObserverTest.cpp
src/Pimpl/: CMakeLists.txt  Person.cpp  Person.h  PersonTest.cpp
src/Prototype/: Animal.h  Animals.h  AnimalsTest.cpp  CMakeLists.txt
src/Singleton/: CMakeLists.txt  Database.h  PersistenceInterface.cpp  PersistenceInterface.h  SingletonTest.cpp
src/Strategy/: CMakeLists.txt
src/Strategy/After/: Circle.h  DrawStrategy.h  Shape.h  SpecificCircleStrategy.h  SpecificSquareStrategy.h  SpecificStrategyTest.cpp  Square.h
src/Strategy/Value/: Circle.h  SpecificCircleStrategy.h  SpecificSquareStrategy.h  SpecificStrategyTest.cpp  Square.h
src/StrongType/: CMakeLists.txt  StrongType.h  StrongTypeTest.cpp
src/TypeErasure/: CMakeLists.txt
src/TypeErasure/Base/: Shape.h  Square.h  TypeErasureShapeTest.cpp
src/TypeErasure/ManualVirtualDispatch/: Shape.h  TypeErasureShapeTest.cpp
src/TypeErasure/Opt/: Circle.h  Shape.h  SpecificDrawStrategy.h  StoragePolicy.h  TypeErasureShapeTest.cpp
src/Visitor/: CMakeLists.txt
src/Visitor/Procedural/: Circle.h  DrawAllShapes.cpp  DrawAllShapes.h  DrawCircle.cpp  DrawCircle.h  DrawSquare.cpp  DrawSquare.h  DrawTest.cpp  Point.h  Shape.h  Square.h
src/Visitor/Variant/: Circle.h  Draw.h  DrawAllShapes.cpp  DrawAllShapes.h  DrawTest.cpp  Point.h  Shape.h  Shapes.h  Square.h
test/: CMakeLists.txt
test/HowToTestPrivateMethod/: CMakeLists.txt  WidgetTest.cpp
tool/cmake/: set_compile_props.cmake
