add_subdirectory(HowToTestPrivateMethod)
add_subdirectory(FreeFunction)
add_subdirectory(Visitor)
add_subdirectory(Strategy)
add_subdirectory(Command)
add_subdirectory(Observer)
add_subdirectory(CRTP)
add_subdirectory(StrongType)
add_subdirectory(Pimpl)
add_subdirectory(Prototype)
add_subdirectory(ExternalPolymorphism)
add_subdirectory(TypeErasure)
add_subdirectory(Decorator)